@@ -18,14 +18,14 @@
   ;; :license "GNU General Public License"
   :description "A tiling, keyboard driven window manager" 
   :components ((:file "package")
-	       (:file "keysyms" :depends-on ("package"))
-	       (:file "keytrans" :depends-on ("keysyms"))
 	       (:file "primitives" :depends-on ("package"))	 
-	       (:file "kmap" :depends-on ("primitives" "keysyms" "keytrans"))
-	       (:file "input" :depends-on ("primitives" "kmap"))
-	       (:file "core" :depends-on ("primitives" "input"))
-	       (:file "mode-line" :depends-on ("primitives" "user"))
-	       (:file "user" :depends-on ("primitives" "core" "input"))
-	       (:file "stumpwm" :depends-on  ("primitives" "core" "mode-line"))
-	       (:file "version" :depends-on ("user"))))
+	       (:file "keysyms" :depends-on ("primitives"))
+	       (:file "keytrans" :depends-on ("keysyms"))
+	       (:file "kmap" :depends-on ("keytrans"))
+	       (:file "input" :depends-on ("kmap"))
+	       (:file "core" :depends-on ("input"))
+	       (:file "user" :depends-on ("core"))
+	       (:file "mode-line" :depends-on ("user"))
+	       (:file "version" :depends-on ("mode-line"))
+	       (:file "stumpwm" :depends-on  ("version"))))
 
